Fix the main entry to the CLI in .toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,4 +26,4 @@ dependencies = [
 package-dir = {"" = "src"}
 
 [project.scripts]
-background_logo_remover = "logobgvanisher.main:main"
+background_logo_remover = "main:main"
