--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -40,9 +40,9 @@ jobs:
       - name: Install ruff
         run: pip install ruff
       - name: Lint with ruff
-        run: ruff src --check
+        run: ruff check .
       - name: Format code with ruff
-        run: ruff src --fix
+        run: ruff format .
 
   test:
     runs-on: ubuntu-latest
