--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,3 +27,27 @@ package-dir = {"" = "src"}
 
 [project.scripts]
 background_logo_remover = "main:main"
+
+
+[tool.ruff]
+src = ["src"]
+fix = true
+show-fixes = true
+show-source = true
+line-length = 120
+ignore-init-module-imports = true
+
+
+[tool.ruff.lint]
+select = [
+    "B",  # flake8-bugbear
+    "E",  # pycodestyle error
+    "F",  # pyflakes
+    "I",  # isort
+    "UP",  # pyupgrade
+    "W",  # pycodestyle warning
+]
+
+[tool.ruff.lint.isort]
+force-single-line = true
+order-by-type = false
