--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: '3.x'
+          python-version: '3.10'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -36,13 +36,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: '3.x'
+          python-version: '3.10'
       - name: Install ruff
         run: pip install ruff
       - name: Lint with ruff
-        run: ruff check src/
+        run: ruff check src/ tests/
       - name: Format code with ruff
-        run: ruff format src/
+        run: ruff format src/ tests/
 
   test:
     runs-on: ubuntu-latest
