Fix package name for cli

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
 package-dir = {"" = "src"}
 
 [project.scripts]
-background_logo_remover = "main:main"
+logo_bg_vanisher = "main:main"
 
 
 [tool.ruff]
